src/assets/scss/main.scss
@import 'utils/vars';
@import 'utils/reset';

html {
  line-height: $mainLineHeight;
  font-size: $mainFontSize;
  color: $mainFontColor;
  height: 100%;
  @media screen and (max-width: $desktopWidth) {
    font-size: 16px;
  }
  @media screen and (max-width: $tableWidth) {
    font-size: 15px;
  }
  @media screen and (max-width: $phoneWidth) {
    font-size: 14px;
  }
}

body {
  font-family: $mainFont;
  font-size: $mainFontSize;
  font-weight: $mainFontWeight;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
  padding: 0;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

input,
textarea,
select,
button {
  border: 1px solid $border-base;
}

a {
  text-decoration: none;
}

ul,
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.page-content {
  width: 100%;
  height: 100%;
  background: $primary-bg;
  padding: 19px 38px;
  overflow-y: scroll;
  overflow-x: hidden;
  
  @media screen and (max-width: $desktopWidth) {
    padding: 7px 10px;
  }

  &::-webkit-scrollbar {
    height: 7px;
    width: 7px;
    background-color: $primary-bg;
  }

  &::-webkit-scrollbar-thumb {
    border-radius: 3px;
    background-color: $scrollbar-color;
  }
}

.spinner-wrapper {
  width: 100vw;
  height: 100vh;
  position: relative;

  .spinner {
    position: absolute;
    top: 35%;
    left: 50%;
    width: 80px;
    height: 80px;
  }
}

.section-header {
  width: inherit;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-bottom: 25px;

  @media screen and (max-width: $phoneWidth) {
    flex-wrap: wrap;
    padding: 0 70px 15px 0;
  }
}

.section {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-bottom: 20px;
}

@import 'common/_common';

